--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,9 @@
 }
 
 body{
-    width: 100;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
     background-color: var(--Very-Light-Gray);
     align-items: center;
     text-align: center;
@@ -111,3 +113,37 @@ body{
     position: absolute;
     transform: translate(200px, -60px);
     }
+
+@media (min-width: 768px){
+    .intro{
+        font-size: 26px;
+    }
+    .intro__paragraph{
+        color: var(--Grayish-Blue);
+        font-size: 16px;
+        max-width: 550px;
+        margin-bottom: 70px;
+        margin: auto;
+    }
+    .supervisor, .teamBuilder, .karma, .calculator{
+        width: 350px;
+        height: 250px;
+        margin-bottom: 0;
+    }
+    .wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 1300px;
+    }
+    .supervisor{
+        margin-top: 175px;
+    }
+    .karma{
+        order: 3;
+        margin-top: -130px;
+    }
+    .calculator{
+        margin-top: 175px;
+    }
+}
