--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,7 +104,7 @@ img{
 @media (min-width: 768px){
 
     .container{
-        width: 70%;
+        width: 90%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -115,15 +115,21 @@ img{
     }
 
     .container__paragraph{
-        font-size: 1.1rem;
+        font-size: 1rem;
+        max-width: 600px;
+        align-items: center;
+        margin: auto;
+        margin-bottom: 100px;
     }
     .cards{
         display: flex;
         align-items: center;
         margin: auto;
-        justify-content: space-evenly;
-        max-width: 60%;
+        justify-content: space-between;
+        max-width: 80%;
         gap: 30px;
     }
-
+.cardsRedOrange{
+    max-width: 80%;
+}
 }
