--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,12 +101,12 @@ img{
     width: 3.5rem;
 }
 
+
 @media (min-width: 768px){
 
     .container{
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        margin: auto;
     }
 
     .container__title,
@@ -124,12 +124,16 @@ img{
     .cards{
         display: flex;
         align-items: center;
-        margin: auto;
-        justify-content: space-between;
+        margin: 0 0 0 14%;
+        justify-content: space-evenly;
         max-width: 80%;
         gap: 30px;
     }
-.cardsRedOrange{
-    max-width: 80%;
+    .card{
+        max-width: 80%;
 }
+.cyan, .red, .orange{
+    max-width: 100%;
+}
+
 }
